--- a/src/main/resources/web/app/main.scss
+++ b/src/main/resources/web/app/main.scss
@@ -1336,6 +1336,7 @@ h1.page-title,
     display: flex;
     flex-direction: column;
     gap: var(--spacing-md);
+    width: 100%;
   }
 
   .post-title {
