[WIP] Fix typos and improve grammar in "From Lonely Agents to Talking Teams: An introduction to A2A" blog post. Add updated `h4` styles to SCSS for better heading consistency.

--- a/src/main/resources/web/app/main.scss
+++ b/src/main/resources/web/app/main.scss
@@ -1424,6 +1424,11 @@ h1.page-title,
     font-weight: 600;
   }
 
+  h4 {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+
   p {
     margin: var(--spacing-lg) 0;
     line-height: 1.8;
